Fix height for avatar.distorted

--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -7,5 +7,5 @@
 
 .avatar.distorted{ 
     width: 200;
-    height: 200;
+    height: 400;
 }
